# gavin-faucet-5btc-analysis

./: LICENSE  README.md
gavin-faucet-5btc-analysis/: CMakeLists.txt  Database.cpp  Database.h  Utxo.h  all_5BTC_UTXOs.txt  db.db  main.cpp  output  remaining_5BTC_UTXOs.txt
gavin-faucet-5btc-analysis/bitcoin-api-cpp-modified/src/bitcoinapi/: CMakeLists.txt  bitcoinapi.cpp  bitcoinapi.h  types.h
